[gd_scene load_steps=12 format=1]

[ext_resource path="res://stage.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://titemap.gd" type="Script" id=3]
[ext_resource path="res://coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://moving_platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://seesaw.tscn" type="PackedScene" id=6]
[ext_resource path="res://one_way_platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://music.ogg" type="AudioStream" id=8]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://parallax_bg.tscn" type="PackedScene" id=10]
[ext_resource path="res://player2.tscn" type="PackedScene" id=11]

[node name="stage" type="Node"]

script/script = ExtResource( 1 )

[node name="tile_map" type="TileMap" parent="."]

transform/pos = Vector2( -8, -4 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 8
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 2, 65536, 2, 131072, 2, 196608, 2, 196624, 0, 196626, 9, 262144, 2, 262158, 0, 262162, 8, 327680, 2, 327697, 536870921, 327698, 7, 327733, 9, 393216, 2, 393231, 0, 393233, 536870920, 393234, 7, 393257, 9, 393269, 7, 458752, 2, 458769, 7, 458770, 8, 458790, 9, 458793, 8, 458805, 8, 524288, 4, 524289, 1, 524304, 536870913, 524305, 536870918, 524306, 6, 524307, 5, 524308, 1, 524326, 8, 524329, 7, 524341, 7, 589824, 10, 589825, 13, 589840, 536870914, 589841, 10, 589842, 10, 589843, 10, 589844, 2, 589862, 7, 589865, 7, 589876, 536870913, 589877, 6, 589878, 1, 655360, 2, 655376, 536870914, 655377, 10, 655378, 10, 655379, 10, 655380, 2, 655398, 7, 655401, 8, 655412, 536870925, 655413, 11, 655414, 13, 720896, 2, 720912, 536870914, 720913, 10, 720914, 10, 720915, 10, 720916, 2, 720934, 8, 720937, 7, 786432, 2, 786437, 9, 786448, 536870914, 786449, 10, 786450, 10, 786451, 10, 786452, 2, 786464, 536870913, 786465, 1, 786470, 7, 786473, 7, 786474, 536870924, 786475, 1, 786528, 0, 851968, 2, 851973, 7, 851984, 536870914, 851985, 10, 851986, 10, 851987, 10, 851988, 2, 851996, 536870913, 851997, 1, 852000, 536870914, 852001, 3, 852006, 7, 852009, 536870913, 852011, 2, 852061, 0, 852062, 0, 917504, 2, 917506, 9, 917509, 7, 917512, 536870921, 917520, 536870925, 917521, 11, 917522, 11, 917523, 11, 917524, 13, 917532, 536870925, 917533, 13, 917536, 536870914, 917537, 4, 917538, 1, 917540, 536870913, 917541, 0, 917542, 1, 917545, 536870914, 917546, 10, 917547, 4, 917548, 1, 983040, 2, 983042, 7, 983045, 7, 983048, 536870920, 983050, 536870913, 983051, 0, 983052, 1, 983064, 536870913, 983065, 1, 983072, 536870914, 983073, 10, 983074, 4, 983075, 0, 983076, 536870916, 983077, 10, 983078, 4, 983079, 536870912, 983080, 536870912, 983081, 536870916, 983082, 10, 983083, 10, 983084, 2, 983095, 9, 983132, 0, 1048576, 2, 1048578, 8, 1048581, 8, 1048584, 0, 1048586, 536870914, 1048587, 536870922, 1048588, 2, 1048600, 536870925, 1048601, 13, 1048604, 9, 1048608, 536870925, 1048609, 536870923, 1048610, 536870923, 1048611, 536870923, 1048612, 10, 1048613, 10, 1048614, 10, 1048615, 10, 1048616, 10, 1048617, 10, 1048618, 10, 1048619, 10, 1048620, 4, 1048621, 1, 1048630, 536870921, 1048631, 8, 1114112, 4, 1114113, 0, 1114114, 6, 1114115, 0, 1114116, 0, 1114117, 6, 1114118, 1, 1114120, 536870920, 1114122, 536870925, 1114123, 11, 1114124, 13, 1114128, 536870913, 1114129, 5, 1114130, 536870917, 1114131, 5, 1114132, 0, 1114133, 1, 1114140, 7, 1114141, 536870921, 1114148, 536870914, 1114149, 10, 1114150, 10, 1114151, 10, 1114152, 10, 1114153, 10, 1114154, 10, 1114155, 10, 1114156, 10, 1114157, 2, 1114166, 536870920, 1114167, 8, 1114201, 0, 1114202, 0, 1114203, 0, 1114204, 0, 1179648, 10, 1179649, 10, 1179650, 10, 1179651, 10, 1179652, 10, 1179653, 10, 1179654, 2, 1179656, 536870919, 1179664, 536870915, 1179665, 10, 1179666, 10, 1179667, 10, 1179668, 10, 1179669, 4, 1179670, 12, 1179675, 9, 1179676, 8, 1179677, 8, 1179684, 536870914, 1179685, 10, 1179686, 10, 1179687, 10, 1179688, 10, 1179689, 10, 1179690, 10, 1179691, 10, 1179692, 10, 1179693, 4, 1179694, 1, 1179701, 9, 1179702, 536870919, 1179703, 7, 1245184, 10, 1245185, 10, 1245186, 10, 1245187, 10, 1245188, 10, 1245189, 10, 1245190, 2, 1245192, 536870919, 1245199, 536870913, 1245200, 536870916, 1245201, 10, 1245202, 10, 1245203, 10, 1245204, 10, 1245205, 10, 1245207, 1, 1245211, 7, 1245212, 7, 1245213, 536870920, 1245220, 536870914, 1245221, 10, 1245222, 10, 1245223, 10, 1245224, 10, 1245225, 10, 1245226, 10, 1245227, 10, 1245228, 10, 1245229, 10, 1245230, 2, 1245237, 8, 1245238, 536870919, 1245239, 8, 1245240, 536870921, 1245260, 5, 1245261, 0, 1245262, 0, 1245263, 0, 1245264, 0, 1245265, 0, 1245266, 0, 1245267, 0, 1245268, 0, 1245269, 0, 1245270, 0, 1245271, 0, 1310720, 10, 1310721, 10, 1310722, 10, 1310723, 10, 1310724, 10, 1310725, 10, 1310726, 2, 1310728, 536870920, 1310730, 536870913, 1310731, 1, 1310734, 536870913, 1310735, 536870916, 1310736, 10, 1310737, 10, 1310738, 10, 1310739, 10, 1310740, 10, 1310741, 10, 1310742, 10, 1310743, 4, 1310744, 1, 1310747, 8, 1310748, 7, 1310749, 536870919, 1310756, 536870914, 1310757, 10, 1310758, 10, 1310759, 10, 1310760, 10, 1310761, 10, 1310762, 10, 1310763, 10, 1310764, 10, 1310765, 10, 1310766, 4, 1310767, 5, 1310768, 12, 1310773, 7, 1310774, 536870919, 1310775, 7, 1310776, 536870919, 1310794, 0, 1376256, 10, 1376257, 10, 1376258, 10, 1376259, 10, 1376260, 10, 1376261, 10, 1376262, 4, 1376263, 0, 1376264, 0, 1376265, 0, 1376266, 536870916, 1376267, 4, 1376268, 0, 1376269, 0, 1376270, 536870916, 1376271, 10, 1376272, 10, 1376273, 10, 1376274, 10, 1376275, 10, 1376276, 10, 1376277, 10, 1376278, 10, 1376279, 10, 1376280, 4, 1376281, 12, 1376283, 8, 1376284, 8, 1376285, 536870920, 1376287, 536870924, 1376288, 0, 1376289, 5, 1376290, 536870917, 1376291, 0, 1376292, 536870916, 1376293, 10, 1376294, 10, 1376295, 10, 1376296, 10, 1376297, 10, 1376298, 10, 1376299, 10, 1376300, 10, 1376301, 10, 1376302, 10, 1376303, 10, 1376305, 12, 1376309, 7, 1376310, 536870920, 1376311, 7, 1376312, 536870920, 1376314, 9, 1376316, 9, 1441792, 10, 1441793, 10, 1441794, 10, 1441795, 10, 1441796, 10, 1441797, 10, 1441798, 10, 1441799, 10, 1441800, 10, 1441801, 10, 1441802, 10, 1441803, 10, 1441804, 10, 1441805, 10, 1441806, 10, 1441807, 10, 1441808, 10, 1441809, 10, 1441810, 10, 1441811, 10, 1441812, 10, 1441813, 10, 1441814, 10, 1441815, 10, 1441816, 10, 1441818, 0, 1441819, 6, 1441820, 6, 1441821, 536870918, 1441822, 5, 1441824, 10, 1441825, 10, 1441826, 10, 1441827, 10, 1441828, 10, 1441829, 10, 1441830, 10, 1441831, 10, 1441832, 10, 1441833, 10, 1441834, 10, 1441835, 10, 1441836, 10, 1441837, 10, 1441838, 10, 1441839, 10, 1441840, 10, 1441842, 0, 1441843, 0, 1441844, 0, 1441845, 6, 1441846, 536870918, 1441847, 6, 1441848, 536870918, 1441849, 0, 1441850, 5, 1441851, 536870917, 1441852, 5, 1441853, 0, 1441854, 0, 1441855, 0, 1441856, 0, 1441857, 0, 1441858, 0, 1441859, 0, 1441860, 0, 1441861, 0, 1441862, 0, 1441863, 0, 1441864, 12, 1441865, 0, 1507328, 10, 1507329, 10, 1507330, 10, 1507331, 10, 1507332, 10, 1507333, 10, 1507334, 10, 1507335, 10, 1507336, 10, 1507337, 10, 1507338, 10, 1507339, 10, 1507340, 10, 1507341, 10, 1507342, 10, 1507343, 10, 1507344, 10, 1507345, 10, 1507346, 10, 1507347, 10, 1507348, 10, 1507349, 10, 1507350, 10, 1507351, 10, 1507352, 10, 1507353, 10, 1507354, 10, 1507355, 10, 1507356, 10, 1507357, 10, 1507358, 10, 1507359, 10, 1507360, 10, 1507361, 10, 1507362, 10, 1507363, 10, 1507364, 10, 1507365, 10, 1507366, 10, 1507367, 10, 1507368, 10, 1507369, 10, 1507370, 10, 1507371, 10, 1507372, 10, 1507373, 10, 1507374, 10, 1507375, 10, 1507376, 10, 1507377, 10, 1507378, 10, 1507379, 10, 1507380, 10, 1507381, 10, 1507382, 10, 1507383, 10, 1507384, 10, 1507385, 10, 1507386, 10, 1507387, 10, 1507388, 10, 1507389, 10, 1507390, 10, 1507391, 10, 1507392, 10, 1507393, 10, 1507394, 10, 1507395, 10, 1507396, 10, 1507397, 10, 1507398, 10, 1507399, 10, 1507401, 12, 1572864, 10, 1572865, 10, 1572866, 10, 1572867, 10, 1572868, 10, 1572869, 10, 1572870, 10, 1572871, 10, 1572872, 10, 1572873, 10, 1572874, 10, 1572875, 10, 1572876, 10, 1572877, 10, 1572878, 10, 1572879, 10, 1572880, 10, 1572881, 10, 1572882, 10, 1572883, 10, 1572884, 10, 1572885, 10, 1572886, 10, 1572887, 10, 1572888, 10, 1572889, 10, 1572890, 10, 1572891, 10, 1572892, 10, 1572893, 10, 1572894, 10, 1572895, 10, 1572896, 10, 1572897, 10, 1572898, 10, 1572899, 10, 1572900, 10, 1572901, 10, 1572902, 10, 1572903, 10, 1572904, 10, 1572905, 10, 1572906, 10, 1572907, 10, 1572908, 10, 1572909, 10, 1572910, 10, 1572911, 10, 1572912, 10, 1572913, 10, 1572914, 10, 1572915, 10, 1572916, 10, 1572917, 10, 1572918, 10, 1572919, 10, 1572920, 10, 1572921, 10, 1572922, 10, 1572923, 10, 1572924, 10, 1572925, 10, 1572926, 10, 1572927, 10, 1572928, 10, 1572929, 10, 1572930, 10, 1572931, 10, 1572932, 10, 1572933, 10, 1572934, 10, 1572935, 10, 1572936, 10, 1572938, 12, 1638400, 10, 1638401, 10, 1638402, 10, 1638403, 10, 1638404, 10, 1638405, 10, 1638406, 10, 1638407, 10, 1638408, 10, 1638409, 10, 1638410, 10, 1638411, 10, 1638412, 10, 1638413, 10, 1638414, 10, 1638415, 10, 1638416, 10, 1638417, 10, 1638418, 10, 1638419, 10, 1638420, 10, 1638421, 10, 1638422, 10, 1638423, 10, 1638424, 10, 1638425, 10, 1638426, 10, 1638427, 10, 1638428, 10, 1638429, 10, 1638430, 10, 1638431, 10, 1638432, 10, 1638433, 10, 1638434, 10, 1638435, 10, 1638436, 10, 1638437, 10, 1638438, 10, 1638439, 10, 1638440, 10, 1638441, 10, 1638442, 10, 1638443, 10, 1638444, 10, 1638445, 10, 1638446, 10, 1638447, 10, 1638448, 10, 1638449, 10, 1638450, 10, 1638451, 10, 1638452, 10, 1638453, 10, 1638454, 10, 1638455, 10, 1638456, 10, 1638457, 10, 1638458, 10, 1638459, 10, 1638460, 10, 1638461, 10, 1638462, 10, 1638463, 10, 1638464, 10, 1638465, 10, 1638466, 10, 1638467, 10, 1638468, 10, 1638469, 10, 1638470, 10, 1638471, 10, 1638472, 10, 1638473, 10, 1638475, 12, 1703952, 10, 1703953, 10, 1703954, 10, 1703955, 10, 1703956, 10, 1703957, 10, 1703958, 10, 1703959, 10, 1703960, 10, 1703961, 10, 1703962, 10, 1703963, 10, 1703964, 10, 1703965, 10, 1703966, 10, 1703967, 10, 1703968, 10, 1703969, 10, 1703970, 10, 1703971, 10, 1703972, 10, 1703973, 10, 1703974, 10, 1703975, 10, 1703976, 10, 1703977, 10, 1703978, 10, 1703979, 10, 1703980, 10, 1703981, 10, 1703982, 10, 1703983, 10, 1703984, 10, 1703985, 10, 1703986, 10, 1703987, 10, 1703988, 10, 1703989, 10, 1703990, 10, 1703991, 10, 1703992, 10, 1703993, 10, 1703994, 10, 1703995, 10, 1703996, 10, 1703997, 10, 1703998, 10, 1703999, 10, 1704000, 10, 1704001, 10, 1704002, 10, 1704003, 10, 1704004, 10, 1704005, 10, 1704006, 10, 1704007, 10, 1704008, 10, 1704009, 10, 1704010, 10, 1704012, 12, 1769488, 10, 1769489, 10, 1769490, 10, 1769491, 10, 1769492, 10, 1769493, 10, 1769494, 10, 1769495, 10, 1769496, 10, 1769497, 10, 1769498, 10, 1769499, 10, 1769500, 10, 1769501, 10, 1769502, 10, 1769503, 10, 1769504, 10, 1769505, 10, 1769506, 10, 1769507, 10, 1769508, 10, 1769509, 10, 1769510, 10, 1769511, 10, 1769512, 10, 1769513, 10, 1769514, 10, 1769515, 10, 1769516, 10, 1769517, 10, 1769518, 10, 1769519, 10, 1769520, 10, 1769521, 10, 1769522, 10, 1769523, 10, 1769524, 10, 1769525, 10, 1769526, 10, 1769527, 10, 1769528, 10, 1769529, 10, 1769530, 10, 1769531, 10, 1769532, 10, 1769533, 10, 1769534, 10, 1769535, 10, 1769536, 10, 1769537, 10, 1769538, 10, 1769539, 10, 1769540, 10, 1769541, 10, 1769542, 10, 1769543, 10, 1769544, 10, 1769545, 10, 1769546, 10, 1769547, 10, 1769549, 0, 1769550, 0, 1769551, 0, 1769552, 0, 1769553, 0, 1769554, 0, 1769555, 0, 1769556, 0, 1769557, 0, 1769558, 0, 1769559, 0, 1769560, 0, 1769561, 0, 1769562, 0, 1769563, 0, 1769564, 0, 1769565, 0, 1769566, 0, 1769567, 0, 1769568, 0, 1769569, 0, 1769570, 0 )
script/script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="coins" type="Node" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 672, 1179 )

[node name="coin2" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 672, 1179 )

[node name="coin1" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 571, 1282 )

[node name="coin 2" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 703, 1177 )

[node name="coin 3" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 736, 1179 )

[node name="coin 4" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1120, 992 )

[node name="coin5" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1120, 992 )

[node name="coin 5" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 5720, 928 )

[node name="coin6" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 5832, 928 )

[node name="coin7" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 6109.65, 680 )
transform/scale = Vector2( 1.42668, 1 )

[node name="coin 6" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1184, 992 )

[node name="coin 7" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1216, 992 )

[node name="coin 8" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1248, 992 )

[node name="coin 9" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1568, 864 )

[node name="coin 10" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1632, 864 )

[node name="coin 11" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1824, 768 )

[node name="coin 12" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1888, 768 )

[node name="coin 13" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 2080, 672 )

[node name="coin 14" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 2144, 672 )

[node name="coin 15" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1792, 1248 )

[node name="coin 16" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1856, 1248 )

[node name="coin 17" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1920, 1248 )

[node name="coin 18" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1920, 1184 )

[node name="coin 19" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1856, 1184 )

[node name="coin 20" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 1792, 1184 )

[node name="coin 21" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 98.8868, 488.515 )

[node name="coin 22" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 89.5989, 481.217 )

[node name="coin 23" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 108.175, 481.217 )

[node name="coin 24" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 116.136, 469.939 )

[node name="coin 25" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 117.463, 457.997 )

[node name="coin 26" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 106.184, 449.373 )

[node name="coin 27" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 98.2234, 458.661 )

[node name="coin 28" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 88.272, 448.71 )

[node name="coin 29" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 79.6476, 457.334 )

[node name="coin 30" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 82.9647, 468.612 )

[node name="coin 31" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3357.42, 465.288 )

[node name="coin 31 2" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3421.42, 465.288 )

[node name="coin 31 3" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3485.42, 465.288 )

[node name="coin 31 4" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3485.42, 401.288 )

[node name="coin 31 5" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3421.42, 401.288 )

[node name="coin 31 6" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 3357.42, 401.288 )

[node name="coin 32" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4172.75, 605.058 )

[node name="coin 31 7" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4236.75, 605.058 )

[node name="coin 31 7 2" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4300.75, 605.058 )

[node name="coin 31 7 3" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4300.75, 541.058 )

[node name="coin 31 7 4" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4236.75, 541.058 )

[node name="coin 31 7 5" parent="coins" instance=ExtResource( 4 )]

transform/pos = Vector2( 4172.75, 541.058 )

[node name="props" type="Node" parent="."]

[node name="moving_platform" parent="props" instance=ExtResource( 5 )]

transform/pos = Vector2( 1451.86, 742.969 )
motion = Vector2( 0, 140 )
cycle = 5.0

[node name="moving_platform 2" parent="props" instance=ExtResource( 5 )]

transform/pos = Vector2( 624.824, 545.544 )
motion = Vector2( 300, 0 )
cycle = 10.0

[node name="moving_platform 3" parent="props" instance=ExtResource( 5 )]

transform/pos = Vector2( 3419.86, 739.662 )
motion = Vector2( 450, 0 )
cycle = 10.0

[node name="seesaw" parent="props" instance=ExtResource( 6 )]

transform/pos = Vector2( 2402.79, 849.52 )

[node name="one_way_platform" parent="props" instance=ExtResource( 7 )]

transform/pos = Vector2( 927.698, 1120.81 )

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 2.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="enemies" type="Node" parent="."]

[node name="enemy5" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 834.664, 1309.6 )

[node name="enemy6" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 688.665, 1232.05 )

[node name="enemy 7" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 1125.21, 1053.06 )

[node name="enemy 8" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 1292.11, 1059.24 )

[node name="enemy 9" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 1607.38, 923.239 )

[node name="enemy 10" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 2586.9, 939.059 )

[node name="enemy 11" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 1457.6, 688.741 )

[node name="enemy 12" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 994.63, 1197.38 )

[node name="enemy 13" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 3429.73, 540.865 )

[node name="enemy 14" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 3630.2, 1350.19 )

[node name="enemy15" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 5074.2, 1192.19 )

[node name="enemy 15" parent="enemies" instance=ExtResource( 9 )]

transform/pos = Vector2( 2406.63, 815.115 )

[node name="parallax_bg" parent="." instance=ExtResource( 10 )]

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = -202.0
margin/right = 358.0
margin/bottom = -10.0
text = "This is a simple demo on how to make a platformer game with Godot.\"This version uses physics and the 2D physics engine for motion and collision.\"\"The demo also shows the benefits of using the scene system, where coins,\"enemies and the player are edited separatedly and instanced in the stage.\"\"To edit the base tiles for the  tileset, open the tileset_edit.tscn file and follow \"instructions.\""
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RichTextLabel" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 139.0
margin/top = 12.0
margin/right = 179.0
margin/bottom = 52.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="player2" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 132, 400 )
mode = 2
mass = 3.0
contacts_reported = 3

[node name="score_text" type="Label" parent="player2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 141.0
margin/top = 32.0
margin/right = 189.0
margin/bottom = 46.0
text = "score "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over" type="Label" parent="player2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 118.0
margin/top = -28.0
margin/right = 158.0
margin/bottom = -14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="enemies/enemy5" to="enemies/enemy5" method="_on_enemy5_body_enter"]

[connection signal="body_enter" from="player2" to="player2" method="_on_player2_body_enter"]


